--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
   <title>DongEsssss Portfolio</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="favicon" type="image/png" sizes="32x32" href="./favicon.ico">
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" />
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="app"></div>
 </html>
