--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,97 @@
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background-color: black;
+    }
+
+    .star {
+      width: 3px;
+      height: 3px;
+      position: absolute;
+      background-color: white;
+      border-radius: 50%;
+    }
+  </style>
 </head>
 
 <body>
   <div id="app"></div>
+  <script>
+    // 화면 크기에 비례해 별의 개수를 설정 (밀도 값 설정)
+    const starDensity = 0.00002; // 1px^2 당 별의 수, 밀도를 조정하여 별의 양을 변경 가능
+
+    // 랜덤 값 생성 함수
+    function getRandom(min, max) {
+      return Math.random() * (max - min) + min;
+    }
+
+    // 현재 화면 크기에 따라 별 개수 설정
+    function calculateStarCount() {
+      const area = window.innerWidth * window.innerHeight;
+      return Math.floor(area * starDensity); // 밀도를 기준으로 별의 수 계산
+    }
+
+    // 별 생성 및 화면에 추가
+    function createStars() {
+      const starCount = calculateStarCount(); // 화면 크기에 따라 별 개수 계산
+      for (let i = 0; i < starCount; i++) {
+        const star = document.createElement("div");
+        star.classList.add("star");
+        star.style.top = getRandom(0, window.innerHeight) + "px";
+        star.style.left = getRandom(0, window.innerWidth) + "px";
+        document.body.appendChild(star);
+      }
+    }
+
+    // 별이 계속해서 움직이도록 설정하는 함수
+    function moveStars() {
+      const stars = document.querySelectorAll(".star");
+      stars.forEach((star) => {
+        let x = getRandom(0, window.innerWidth);
+        let y = getRandom(0, window.innerHeight);
+        let speedX = getRandom(-0.5, 0.5); // x축 이동 속도
+        let speedY = getRandom(-0.5, 0.5); // y축 이동 속도
+
+        function updatePosition() {
+          x += speedX;
+          y += speedY;
+
+          // 별이 화면을 벗어나면 다시 화면으로 진입하도록 설정
+          if (x < 0) x = window.innerWidth;
+          if (x > window.innerWidth) x = 0;
+          if (y < 0) y = window.innerHeight;
+          if (y > window.innerHeight) y = 0;
+
+          // 별의 새로운 위치 적용
+          star.style.left = x + "px";
+          star.style.top = y + "px";
+
+          // 주기적으로 위치 업데이트
+          requestAnimationFrame(updatePosition);
+        }
+
+        // 처음 위치와 속도로 별의 위치를 계속 업데이트
+        updatePosition();
+      });
+    }
+
+    // 창 크기가 변경될 때 별의 개수를 재조정
+    function resetStars() {
+      document.body.innerHTML = ""; // 기존 별들 제거
+      createStars();
+      moveStars();
+    }
+
+    // 처음 별 생성 후 이동 설정
+    createStars();
+    moveStars();
+
+    // 화면 크기가 변경될 때 별의 개수를 재설정
+    window.addEventListener("resize", resetStars);
+  </script>
+
 </html>
